--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  background: #2ecc71;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
 }
