--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,76 @@
+@font-face {
+  font-family: 'Game';
+  src: url('./assets/fonts/crackman.ttf')
+}
+
 .App {
   text-align: center;
+  width: 400px;
+  margin: 0 auto;
+  background: #ffffff;
+  border-radius: 2px;
+  box-shadow: 3px 3px 10px #888888;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  padding: 50px;
+  transform: translate(-50%, -50%);
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.title{
+  color: #ffffff;
+  text-align: center;
+  font-family: 'Game';
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.status {
+  width: 400px;
+  height: 40px;
+  font-size: 24px;
+  line-height: 40px;
+  color: #c0392b;
+  background: #ffffff;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 3px 3px 12px #888888;
+}
+.row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
 }
-
-.App-link {
-  color: #61dafb;
+.cell {
+  flex: 1;
+  width: 100px;
+  height: 100px;
+  border-radius: 2px;
+  box-shadow: 2px 2px 12px #888888;
+  line-height: 50px;
+  font-size: 50px;
+  display: flex;
+  background: #8e44ad;
+  color: #ecf0f1;
+  margin: 4px;
+  cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cell:hover {
+  background: #9b59b6;
+}
+.cell > p {
+  margin: auto;
+}
+.x {
+  background: #f1c40f;
+}
+.zero {
+  background: #2980b9;
+}
+.reset {
+  width: 100px;
+  margin: 10px auto;
+  text-align: center;
+  background: #ecf0f1;
+  border-radius: 3px;
+  box-shadow: 4px 4px 10px #888888;
+  cursor: pointer;
+  font-size: 20px;
+  color: #2c3e50
 }
